Fix fiches ressources

--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{article} % mathserif
+\documentclass[11pt,french]{article} % mathserif
 
 %\usepackage[T1]{fontenc}
 % \usepackage{libertinust1math}
@@ -13,7 +13,6 @@
 \usepackage{textcomp}
 \usepackage{colortbl}%
 \usepackage{etoolbox}
-\usepackage[francais]{babel}
 \usepackage{hyperref}
 \usepackage{multicol}
 \usepackage{geometry}
@@ -31,7 +30,8 @@
 \usepackage{multicol}
 \usepackage[framemethod=tikz]{mdframed}
 \usepackage{fancyhdr}
-
+\usepackage{xspace}
+\usepackage{babel}
 
 \setlist{leftmargin=1em,topsep=0pt,partopsep=0pt,itemsep=0pt,itemindent=0em}
 
