--- a/latex/ressources/R101.tex
+++ b/latex/ressources/R101.tex
@@ -35,11 +35,11 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoirs-faire pour
-les compétences de cœur de métier ``Administrer les réseaux et
-l'Internet'' (RT1) et ``Connecter les entreprises et les usagers''
-(RT2). Elle contribue aussi à la compétence ``Créer des outils et
-applications informatiques pour les R\&T'' (RT3) à travers la découverte
-du poste client et de son environnement logiciel.\\
+les compétences de cœur de métier \og Administrer les réseaux et
+l'Internet\fg{} (RT1) et \og Connecter les entreprises et les
+usagers\fg{} (RT2). Elle contribue aussi à la compétence \og Créer des
+outils et applications informatiques pour les R\&T\fg{} (RT3) à travers
+la découverte du poste client et de son environnement logiciel.\\
 Cette ressource permet à l'étudiant de découvrir et déployer un premier
 système d'information au sein d'une entreprise. À travers des exercices
 de mise en place progressive de réseaux locaux, d'interconnection
@@ -74,7 +74,7 @@ pourront servir de support).}
     Architecture d'un système d'exploitation
   \item
     Différents types de systèmes d'exploitation : les clients, les
-    serveurs, les systèmes embarqués,
+    serveurs, les systèmes embarqués
   \item
     Systèmes d'exploitation commerciaux et Open Sources.
   \item
@@ -96,4 +96,4 @@ pourront servir de support).}
 }
 
 % Mots-clés
-\ajoutRmotscles{Réseau, Système d'exploitation, \textabbrv{TCP}/\textabbrv{IP}, \textabbrv{LAN}, Hygiène informatique.}
+\ajoutRmotscles{Réseau, système d'exploitation, \textabbrv{TCP}/\textabbrv{IP}, \textabbrv{LAN}, hygiène informatique.}
