--- a/latex/ressources/R107.tex
+++ b/latex/ressources/R107.tex
@@ -39,10 +39,13 @@ spécifier formellement un traitement automatisé de l'information. Ces
 bases pourront venir en appui de nombreuses compétences techniques (en
 informatique, en réseau, en télécommunication, \ldots) que le
 professionnel R\&T doit développer et s'inscrivent dans de nombreuses
-situations professionnelles que rencontrent le professionnel R\&T,
-notamment le développement d'outils informatiques à usage interne d'une
-équipe (compétence RT3-Programmer) ou l'automatisation du déploiement et
-de la maintenance des outils logiciels (compétence RT1-Administrer).}
+situations professionnelles que rencontre le professionnel R\&T. Cette
+ressource est nécessaire pour apprendre à développer des outils
+informatiques à usage interne d'une équipe: compétence \og Créer des
+outils et applications informatiques pour les R\&T\fg{} (RT3) et pour
+l'automatisation du déploiement et de la maintenance des outils
+logiciels: compétence \og Administrer les réseaux et l'Internet\fg{}
+(RT1).}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -68,14 +71,14 @@ contenus suivants seront traités :
   environnement de développement).
 \item
   Prise en main de bibliothèques, modules, d'objets existants (appels de
-  méthodes), \ldots{}
+  méthodes).
 \item
   Manipulation de fichiers texte.
 \item
   Interaction avec le système d'exploitation et la ligne de commande :
   arguments, lancement de commandes.
 \item
-  Suivi de versions (git, svn, \ldots).
+  Suivi de versions (git, svn).
 \end{itemize}
 L'utilisation de l'anglais est préconisée pour la documentation du code.
 }
