--- a/latex/ressources/R108.tex
+++ b/latex/ressources/R108.tex
@@ -44,11 +44,12 @@ Cette ressource introduit également un usage avancé du système
 d'exploitation nécessaire au besoin d'un professionnel R\&T. Elle vise
 la maîtrise de commandes en ligne pour gérer l'arborescence de fichiers,
 les programmes et les processus du système d'exploitation, par exemple
-pour exécuter un programme ou configurer les éléments d'un site Web
-(compétence RT3-Programmer). Elle vise également l'emploi des
-principales commandes réseau, dans des scripts simples. Ces commandes
-sont les bases d'appui pour administrer - par la suite - un réseau et de
-ses services (compétence RT1-Administrer).\\
+pour exécuter un programme ou configurer les éléments d'un site Web:
+compétence \og Créer des outils et applications informatiques pour les
+R\&T\fg{} (RT3). Elle vise également l'emploi des principales commandes
+réseau, dans des scripts simples. Ces commandes sont les bases d'appui
+pour administrer - par la suite - un réseau et de ses services:
+compétence \og Administrer les réseaux et l'Internet\fg{} (RT1).\\
 Elle contribue donc aux apprentissages critiques mentionnés
 précédemment.}
 
@@ -69,12 +70,11 @@ précédemment.}
   Gestion des processus et flux (redirection, pipe\ldots)
 \item
   Se documenter sur le détail des commandes en français/anglais
-  (commande \texttt{man})
+  (commande man)
 \item
   Consulter et modifier les variables d'environnement
 \item
-  Commandes réseau (\texttt{wget}, \texttt{curl}, \texttt{ping},
-  \texttt{traceroute}, \texttt{netstat}, \texttt{nmap}\ldots)
+  Commandes réseau (wget, curl, ping, traceroute, netstat, nmap)
 \item
   Initiation aux scripts pour l'automatisation de séquences de
   commandes, aux structures de contrôle
