--- a/latex/ressources/R109.tex
+++ b/latex/ressources/R109.tex
@@ -34,14 +34,14 @@
 \ajoutRancrage{Le professionnel R\&T peut être amené à modifier et à produire des
 contenus Web pour le site Web et l'intranet d'une entreprise. Grâce aux
 pages Web, il peut aisément mettre à disposition des collaborateurs les
-outils-métiers qu'il aura développés (compétence RT3-Programmer) et
-leurs documentations. Plus généralement, il pourra même développer une
+outils-métiers qu'il aura développés (compétence RT3) et leurs
+documentations. Plus généralement, il pourra même développer une
 application Web.\\
 La présente ressource fournit les bases conceptuelles et pratiques pour
 écrire et modifier des pages Web dans un langage normalisé de
 description de contenus et de sa présentation. Elle traite donc de la
 création de contenus Web (un thème abordé par PIX,
-(\url{https://pix.fr/competences}) mais également des technologies mises
+\url{https://pix.fr/competences}) mais également des technologies mises
 en œuvre pour délivrer ses contenus aux utilisateurs par le biais d'un
 navigateur Web.}
 
@@ -56,7 +56,7 @@ navigateur Web.}
 \item
   Structure d'une page : langage à balise, mise en forme et feuilles de
   styles (notions élémentaires
-  de \textabbrv{CSS}), notions de \emph{responsive design}
+  de \textabbrv{CSS}), notions de responsive design
 \item
   Contenu d'une page : éléments multimédia, encodage des caractères
 \item
