--- a/latex/ressources/R111.tex
+++ b/latex/ressources/R111.tex
@@ -30,6 +30,7 @@
 \ajoutRsae{SAÉ13}{Découvrir un dispositif de transmission}
 \ajoutRsae{SAÉ14}{Se présenter sur Internet}
 \ajoutRsae{SAÉ15}{Traiter des données}
+\ajoutRsae{SAÉ16}{Portfolio}
 
 % Les pre-requis
 
