--- a/latex/ressources/R207.tex
+++ b/latex/ressources/R207.tex
@@ -44,10 +44,11 @@ informatiques). Elles peuvent servir à configurer et à administrer les
 services réseau d'une entreprise (RT1) ou à alimenter les pages d'un
 site Web (RT3). Il est donc amené à stocker, organiser, gérer, protéger
 des données provenant de différentes sources (thématiques du PIX,
-cf.~https://pix.fr/competences), mais aussi à les traiter en développant
-différents outils informatiques pour ses besoins personnels ou pour son
-équipe (RT3). Plus largement, il contribue activement à l'exploitation
-et à la maintenance du système d'information de l' entreprise.\\
+cf.~\url{https://pix.fr/competences}), mais aussi à les traiter en
+développant différents outils informatiques pour ses besoins personnels
+ou pour son équipe (RT3). Plus largement, il contribue activement à
+l'exploitation et à la maintenance du système d'information de l'
+entreprise.\\
 Cette ressource introduit les éléments fondamentaux des systèmes de
 gestion de base de données. Elle présente différentes alternatives
 technologiques pour le stockage et le codage de l'information, en
