--- a/latex/ressources/R102.tex
+++ b/latex/ressources/R102.tex
@@ -38,9 +38,9 @@
 et intégratif de l'ensemble des mécanismes nécessaires au fonctionnement
 des réseaux informatiques. Ce cadre général est essentiel, et sert de
 référence à l'ensemble des autres ressources réseaux.\\
-Elle participe principalement à la compétence RT1 ``Administrer les
-réseaux et l'Internet'' à travers la compréhension et l'utilisation de
-la partie réseau des systèmes d'exploitation, la compréhension de
+Elle participe principalement à la compétence RT1 \og Administrer les
+réseaux et l'Internet\fg{} à travers la compréhension et l'utilisation
+de la partie réseau des systèmes d'exploitation, la compréhension de
 l'interopérabilité des systèmes via les protocoles réseaux, ainsi que
 les notions de services rendus et de performance du réseau.}
 
@@ -64,16 +64,15 @@ les notions de services rendus et de performance du réseau.}
   taux de pertes.
 \end{itemize}
 Outils préconisés : logiciels du type Wireshark, GNS3, Packet Tracer,
-\texttt{scapy}, Marionnet.\\
+scapy, Marionnet.Faire le lien avec les aspects sécurité informatique et
+réseaux mentionnés en R101.\\
 Des éléments relatifs à la sécurité et aux risques informatiques et
 réseaux seront progressivement introduits au travers des différents
 contenus étudiés afin que ces éléments deviennent une préoccupation
 routinière. Les éléments de cybersécurité pourront être abordés via des
-exemples tels que l'\emph{arp-spoofing}, la prise d'empreintes via \textabbrv{ICMP},
-des captures, la génération et analyse de trames. Des liens avec les
-aspects sécurité informatique et réseaux mentionnés en R101 seront
-également faits.
+exemples tels que l'arp-spoofing, la prise d'empreintes via \textabbrv{ICMP}, des
+captures, la génération et analyse de trames.
 }
 
 % Mots-clés
-\ajoutRmotscles{Architecture en couches, Topologies, Protocoles, Modèle \textabbrv{TCP}/\textabbrv{IP}.}
+\ajoutRmotscles{Architecture en couches, topologies, protocoles, modèle \textabbrv{TCP}/\textabbrv{IP}.}
