--- a/latex/ressources/R105.tex
+++ b/latex/ressources/R105.tex
@@ -33,9 +33,10 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte les bases de connaissances et savoir-faire
-techniques pour la compétence ``connecter les entreprises et les
-usagers'' à travers les apprentissages critiques ``mesurer et analyser
-les signaux'' et ``déployer des supports de transmission''.\\
+techniques pour la compétence \og connecter les entreprises et les
+usagers\fg{} à travers les apprentissages critiques \og mesurer et
+analyser les signaux\fg{} et \og déployer des supports de
+transmission\fg{}.\\
 Il s'agit d'étudier les concepts fondamentaux des supports de
 transmission.}
 
@@ -47,10 +48,10 @@ transmission.}
   Types de support de transmission (réseau d'entreprise, réseau
   opérateur)
 \item
-  Caractéristiques d'un ou plusieurs types de supports (par ex : retard
+  Caractéristiques d'un ou plusieurs types de supports (exemples: retard
   de propagation, atténuation,
   continuité, échos, bruit, perturbations, identifier un défaut, bande
-  passante,\ldots{} ) à partir de mesures
+  passante ) à partir de mesures
   et d'analyse des signaux
 \item
   Prolongement possible : recettage, certification \textabbrv{LAN}.
