--- a/latex/ressources/R110.tex
+++ b/latex/ressources/R110.tex
@@ -35,18 +35,11 @@
 
 
 % Le descriptif
-\ajoutRancrage{Cette ressource apporte le socle de connaissances langagières pour les
-compétences de cœur de métier ``Administrer les réseaux et l'Internet''
-(RT1) et ``Connecter les entreprises et les usagers'' (RT2). Elle
-contribue aussi à la compétence ``Créer des outils et applications
-informatiques pour les R\&T'' (RT3) à travers des mises en situations,
-jeux de rôle, dialogues qui permettent la prise de parole en continu et
-en interaction, en développant les compétences de compréhension dans un
-contexte professionnel technique.}
+\ajoutRancrage{}
 
 % Contenus
 \ajoutRcontenudetaille{
-Partant d'un niveau pré-requis A2-B1,
+Objectifs visés
 \begin{itemize}
 \item
   Développer sa confiance en soi
