--- a/latex/ressources/R112.tex
+++ b/latex/ressources/R112.tex
@@ -31,53 +31,52 @@
 
 
 % Le descriptif
-\ajoutRancrage{Le Projet Personnel et Professionnel (\textabbrv{PPP}) des semestres 1 et 2 de la
-première année de B.U.T. permet à l'étudiant :
-\begin{itemize}
-\item
-  s'approprier son champ d'activité;
-\item
-  se constituer un panorama des métiers dans le domaine des réseaux et
-  télécommunications;
-\item
-  se constituer un panorama des entreprises dans le secteur des réseaux
-  et télécommunications;
-\item
-  se constituer un panorama des différents parcours du BUT R\&T pour
-  pouvoir se positionner avec pertinence;
-\item
-  amener les étudiants à se projeter en tant que professionnels en
-  mobilisant les techniques de recrutement dans le
-  cadre d'une recherche de stage ou d'un contrat d'alternance;
-\item
-  découvrir le portfolio et son utilisation dans la formation;
-\item
-  de faire le lien entre les niveaux de compétences ciblés, les SAÉ et
-  les ressources au programme de chaque semestre ;
-\item
-  d'avoir une compréhension exhaustive du référentiel de compétences de
-  la formation et des éléments le structurant
-  (composantes essentielles, niveaux, apprentissages critiques, famille
-  de situations).
-\end{itemize}}
+\ajoutRancrage{}
 
 % Contenus
 \ajoutRcontenudetaille{
-Les activités pouvant être proposées dans cette ressource sont :
+\vspace{-5pt}
 \begin{itemize}
 \item
-  Rencontres d'entrepreneurs, de chefs de service, de techniciens et
-  d'enseignants;
+  s'approprier son champ d'activité ;
 \item
-  Visites d'entreprises, forums;
+  se constituer un panorama des métiers dans le domaine des réseaux et
+  télécommunications ;
 \item
-  Témoignages, relations avec d'anciens diplômés;
+  se constituer un panorama des entreprises dans le secteur des réseaux
+  et télécommunications ;
 \item
-  Découverte et compréhension d'un bassin d'emploi particulier;
+  amener les étudiants à se projeter en tant que professionnels en
+  mobilisant les techniques de recrutement
+  dans le cadre d'une recherche de stage ou d'un contrat d'alternance ;
 \item
-  Intérêt et prise en main d'un portfolio;
+  découvrir le portfolio et son utilisation dans la formation ;
 \item
-  Déterminer ses atouts personnels.
+  de faire le lien entre les niveaux de compétences ciblés, les SAÉ et
+  les ressources au programme de
+  chaque semestre ;
+\item
+  d'avoir une compréhension exhaustive du référentiel de compétences de
+  la formation et des éléments
+  le structurant (composantes essentielles, niveaux, apprentissages
+  critiques, famille de situations)
+  ;
+\end{itemize}
+Activités notamment proposées dans cette ressource :
+\begin{itemize}
+\item
+  rencontres d'entrepreneurs, de chefs de service, de techniciens et
+  d'enseignants ;
+\item
+  visites d'entreprises, forums;
+\item
+  témoignages, relations avec d'anciens diplômés ;
+\item
+  découverte et compréhension d'un bassin d'emploi particulier ;
+\item
+  intérêt et prise en main d'un portfolio ;
+\item
+  déterminer ses atouts personnels.
 \end{itemize}
 }
 
