--- a/latex/ressources/R113.tex
+++ b/latex/ressources/R113.tex
@@ -47,57 +47,60 @@ télécommunications.}
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Introduction aux signaux :
+  Introduction aux signaux
   \begin{itemize}
   \item
     graphe d'un signal;
   \item
-    symétries : parité, imparité, \ldots;
+    symétries : parité, imparité;
   \item
     causalité, support temporel;
   \item
     équation de droite;
   \item
-    fonction définie par morceaux (par ex : valeur absolue);
+    fonction définie par morceaux (ex. : valeur absolue);
   \item
-    signaux de base (par ex : porte, triangle, échelon, rampe\ldots);
+    signaux de base : (ex. : porte, triangle, échelon, rampe\ldots);
   \item
     opérations sur les signaux : avance, retard, dilatation,
     amplification, offset (interprétation géométrique
-    sur le graphe), somme de signaux.
+    sur le graphe), somme de signaux
   \end{itemize}
 \end{itemize}
 Cette partie sera l'occasion de réviser les règles de calculs de base
 par l'intermédiaire du calcul d'images et d'antécédents.
 \begin{itemize}
 \item
-  Éléments de trigonométrie :
+  Éléments de trigonométrie
   \begin{itemize}
   \item
     définition du radian;
   \item
     cercle trigonométrique;
   \item
-    formules \(\cos(-x)\), \(\cos(\pi\pm x)\) et
-    \(\cos(\frac{\pi}{2}\pm x)\); les même avec sinus;
-  \item
-    angles remarquables.
+    formules \(\cos(x)\), \(\cos(\pi\pm x)\) et
+    \(\cos(\frac{\pi}{2}\pm x)\)
   \end{itemize}
+\end{itemize}
+et les mêmes avec sinus;
+\begin{itemize}
 \item
-  Signaux périodiques :
+  angles remarquables.
+\item
+  Signaux périodiques
   \begin{itemize}
   \item
     période, fréquence, pulsation;
   \item
     signaux périodiques de base : créneau, dent de scie, sinus,
-    cosinus\ldots;
+    cosinus\ldots{}
   \item
     fréquence/période/pulsation d'un signal dilaté, d'une combinaison
     linéaire de signaux périodiques;
   \item
-    graphe des signaux avancés, retardés, dilatés\ldots;
+    graphe des signaux avancés, retardés, dilatés;
   \item
-    graphe de \(A\cos(\omega t + \phi)\), \(A\cos(\omega t + \phi)\).
+    graphe de \(A\cos(\omega t + \phi)\), \(A\cos(\omega t + \phi)\)
   \end{itemize}
 \end{itemize}
 }
