--- a/latex/ressources/R114.tex
+++ b/latex/ressources/R114.tex
@@ -48,36 +48,36 @@ lien avec l'électronique et les télécommunications.}
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Trigonométrie :
+  Trigonométrie
   \begin{itemize}
   \item
-    formules \(\cos(a\pm b)\), \(\cos(a)\cos(b)\), \(cos^2(a)\); même
-    formules avec sinus:
+    formules \(\cos(a\pm b)\), \(\cos(a)\cos(b)\), \(cos^2(a)\) et mêmes
+    formules avec sinus;
   \item
-    lien avec les vecteurs et le produit scalaire:
+    lien avec les vecteurs et le produit scalaire;
   \item
     forme
-    \(a\cos(\omega_0 t)+b\sin(\omega_0 t) = A\cos(\omega_0 t +\phi)=A\cos(2\pi f_0 t+\phi)\):
+    \(a\cos(\omega_0 t)+b\sin(\omega_0 t) = A\cos(\omega_0 t +\phi)=A\cos(2\pi f_0 t+\phi)\);
   \item
     fonctions trigonométriques réciproques (en particulier arctangente).
   \end{itemize}
 \item
-  Fonctions logarithme et exponentielle, puissances :
+  Fonctions logarithme et exponentielle, puissances
   \begin{itemize}
   \item
-    graphes;
+    graphes
   \item
-    propriétés, retour sur les propriétés des puissances;
+    propriétés, retour sur les propriétés des puissances
   \item
-    application au dB.
+    application au dB
   \end{itemize}
 \item
-  Nombres complexes :
+  Nombres complexes
   \begin{itemize}
   \item
     forme algébrique;
   \item
-    addition, multiplication et division avec la forme algébrique;
+    addition, multiplication et division avec la forme algébrique
   \item
     forme exponentielle (retour sur les propriétés de l'expo);
   \item
