--- a/latex/ressources/R201.tex
+++ b/latex/ressources/R201.tex
@@ -37,16 +37,16 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoirs-faire pour
-les compétences de cœur de métier ``Administrer les réseaux et
-l'Internet'' (RT1) et ``Connecter les entreprises et les usagers''
-(RT2). Elle vise à fournir à l'étudiant les connaissances et les
-compétences indispensables pour pouvoir concevoir, déployer et maintenir
-les infrastructures réseaux grande distance (Internet), plus précisément
-l'adressage, le routage et le transport de paquets. Une première
-approche du filtrage (sécurité) y est aussi abordée.\\
-Elle contribue aussi à la compétence ``Créer des outils et applications
-informatiques pour les R\&T'' (RT3) à travers la découverte du poste
-client et de son environnement logiciel.\\
+les compétences de cœur de métier \og Administrer les réseaux et
+l'Internet\fg{} (RT1) et \og Connecter les entreprises et les
+usagers\fg{} (RT2). Elle vise à fournir à l'étudiant les connaissances
+et les compétences indispensables pour pouvoir concevoir, déployer et
+maintenir les infrastructures réseaux grande distance (Internet), plus
+précisément l'adressage, le routage et le transport de paquets. Une
+première approche du filtrage (sécurité) y est aussi abordée.\\
+Elle contribue aussi à la compétence \og Créer des outils et
+applications informatiques pour les R\&T\fg{} (RT3) à travers la
+découverte du poste client et de son environnement logiciel.\\
 On introduira des notions de sécurité informatique (les ressources
 associées aux recommandations de l'\textabbrv{ANSSI}, CyberEdu, CyberMalveillance
 pourront servir de support)}
