Corrige 2 fiches + suppr. pipe prerequis

--- a/latex/modeles/tableau.tex
+++ b/latex/modeles/tableau.tex
@@ -74,7 +74,7 @@ Aucun
 
   \forLoop{1}{\value{cptRprerequis\CODE}}{noligne}{
   		\xdef\rescode{\csname Rprerequiscode\CODE\Alph{noligne}\endcsname}
-		\hyperlink{res:\rescode}{\textcolor{ressourceC}{\rescode}}~| {\csname Rprerequisname\CODE\Alph{noligne}\endcsname}
+		\hyperlink{res:\rescode}{\textcolor{ressourceC}{\rescode}} {\csname Rprerequisname\CODE\Alph{noligne}\endcsname}
    \tabularnewline %
    }
 \end{tabular}%
