Correction des fiches ressources de S1 et S2.

--- a/latex/ressources/R115.tex
+++ b/latex/ressources/R115.tex
@@ -49,34 +49,34 @@ Dans le cadre de cette ressource transversale, l'étudiant devra :
     Utilisation avancée du courriel : création d'une adresse générique,
     utilisation du \textabbrv{CC} et du \textabbrv{CCi}.
   \item
-    Utilisation d'outils collaboratifs adaptés (par ex : Mattermost,
+    Utilisation d'outils collaboratifs adaptés (par exemple Mattermost,
     Slack, MSTeams, Google Drive,
-    OnlyOffice)
+    OnlyOffice).
   \end{itemize}
 \item
   Organiser son travail et celui de l'équipe à partir d'outils de
-  planification (Gantt, \textabbrv{PERT})
+  planification (Gantt, \textabbrv{PERT}).
 \item
   Prendre sa place dans une équipe en connaissant les différents rôles
-  d'une équipe projet
+  d'une équipe projet.
 \item
   Conceptualiser les étapes des tâches à réaliser à l'aide d'outils
   adaptés (cartes mentales, infographies,
-  etc.)
+  etc.).
 \item
   Prendre conscience des délais et échéances dans un travail en mode
-  projet
+  projet.
 \item
   Savoir s'adapter à des profils professionnels différents (manager,
   collaborateur, client) qui interviennent
-  dans un projet
+  dans un projet.
 \item
   Apprendre à faire un bilan régulier sur l'avancée d'un projet : points
-  bloquants, solutions apportées
+  bloquants, solutions apportées.
 \item
   Appliquer la critique constructive dans l'intérêt du projet
 \item
-  Organiser des réunions de projet
+  Organiser des réunions de projet.
 \item
   Présenter un projet selon ses spécificités et le public visé.
 \end{itemize}
