--- a/latex/ressources/R204.tex
+++ b/latex/ressources/R204.tex
@@ -72,4 +72,4 @@ informatique.
 }
 
 % Mots-clés
-\ajoutRmotscles{\textabbrv{IPBX}, \textabbrv{PABX}, \textabbrv{TDM}/\textabbrv{IP}, Postes et services téléphoniques, Visiophonie, Plan de numérotation, Réseaux téléphoniques publics.}
+\ajoutRmotscles{\textabbrv{IPBX}, \textabbrv{PABX}, \textabbrv{TDM}/\textabbrv{IP}, postes et services téléphoniques, visiophonie, plan de numérotation, réseaux téléphoniques publics.}
