--- a/latex/ressources/R205.tex
+++ b/latex/ressources/R205.tex
@@ -35,9 +35,9 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoir-faire pour
-les compétences de cœur de métier ``Administrer les réseaux et
-l'Internet'' (RT1) et ``Connecter les entreprises et les usagers''
-(RT2).\\
+les compétences de cœur de métier \og Administrer les réseaux et
+l'Internet\fg{} (RT1) et \og Connecter les entreprises et les
+usagers\fg{} (RT2)\\
 La caractérisation du comportement d'un système télécom en fonction de
 la fréquence permet au technicien d'appréhender la notion de bande
 passante et d'introduire celle de canal de transmission.\\
@@ -46,24 +46,15 @@ modifications ces signaux vont subir dans un système télécom.}
 
 % Contenus
 \ajoutRcontenudetaille{
-\vspace{-5pt}
-\begin{itemize}
-\item
-  Étude de la fonction de transfert d'un système linéaire ; Notion de
-  filtrage ; Réponse
-  fréquentielle d'un support de transmission ; Notion de bande passante
-  ; Atténuation, amplification des systèmes.
-\item
-  Représentations temporelles et fréquentielles des signaux ; Analyse
-  spectrale de signaux réels (par ex:
-  audio, WiFi, \textabbrv{ADSL}, etc.).
-\item
-  Influence de la fonction de transfert d'un système sur un signal (par
-  ex: audio, numérique, \ldots).
-\item
-  Bilans de liaison de systèmes de transmissions.
-\end{itemize}
+Étude de la fonction de transfert d'un système linéaire; notion de
+filtrage; réponse fréquentielle d'un support de transmission; notion de
+bande passante. Atténuation, amplification des systèmes.\\
+Représentations temporelles et fréquentielles des signaux; analyse
+spectrale de signaux réels (exemples : audio, WiFi, \textabbrv{ADSL}).\\
+Influence de la fonction de transfert d'un système sur un signal
+(exemples : audio, numérique).\\
+Bilans de liaison de systèmes de transmissions.
 }
 
 % Mots-clés
-\ajoutRmotscles{Représentations temporelles et fréquentielles des signaux, Fonction de transfert, Bande passante, Analyse spectrale.}
+\ajoutRmotscles{Représentations temporelles et fréquentielles des signaux, fonction de transfert, bande passante, analyse spectrale.}
