--- a/latex/ressources/R206.tex
+++ b/latex/ressources/R206.tex
@@ -35,8 +35,9 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoir-faire pour
-les compétences de cœur de métier ``Administrer les réseaux et
-l'Internet'' (RT1) et ``Connecter les entreprises et les usagers'' (RT2)\\
+les compétences de cœur de métier \og Administrer les réseaux et
+l'Internet\fg{} (RT1) et \og Connecter les entreprises et les
+usagers\fg{} (RT2)\\
 Les systèmes de Réseaux et Télécoms véhiculent en permanence de données
 numérisées. Ce module vient donc présenter les principes de la
 numérisation de l'information, les contraintes de cette numérisation et
@@ -50,7 +51,7 @@ en téléphonie, ou en télécommunications numériques.}
 \item
   Comprendre la notion de signal numérique, et le principe de la
   numérisation et de la restitution de
-  signaux analogique.
+  signaux analogiques
 \item
   Échantillonnage des signaux : choix d'une fréquence adéquate
   d'échantillonnage.
@@ -62,4 +63,4 @@ en téléphonie, ou en télécommunications numériques.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Numérisation, Échantillonnage, Quantification, Acquisition/restitution, \textabbrv{CAN} et \textabbrv{CNA}.}
+\ajoutRmotscles{Numérisation, Échantillonnage, Quantification, Acquisition/restitution, \textabbrv{CAN}, \textabbrv{CNA}.}
