--- a/latex/ressources/R209.tex
+++ b/latex/ressources/R209.tex
@@ -42,14 +42,16 @@
 
 % Le descriptif
 \ajoutRancrage{Le professionnel R\&T peut être amené à développer, pour ses besoins
-personnels ou pour ses collaborateurs, un site Web (RT3), par exemple
-pour fournir une interface de présentation du réseau informatique.\\
+personnels ou pour ses collaborateurs, un site Web, par exemple pour
+fournir une interface de présentation du réseau informatique :
+compétence \og Créer des outils et applications informatiques pour les
+R\&T\fg{} (RT3).\\
 Il doit en appréhender tous les éléments : il doit aussi bien connaître
 les protocoles de communication du Web que veiller à la sécurité de
 ceux-ci. Il doit également pouvoir accéder, traiter et afficher des
 informations provenant de différentes sources de données telles que des
 \textabbrv{SGBD}, des \textabbrv{API} ou des fichiers structurés. La présente ressource
-contribue de fait aux apprentissages critiques mentionnés précédemment.}
+contribue aux apprentissages critiques mentionnés précédemment.}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -61,26 +63,27 @@ contribue de fait aux apprentissages critiques mentionnés précédemment.}
   Mise en forme de pages Web :
   \begin{itemize}
   \item
-    Balises \textabbrv{HTML} avancées;
+    balises \textabbrv{HTML} avancées;
   \item
-    Structure d'une page avec son \textabbrv{DOM};
+    structure d'une page avec son \textabbrv{DOM};
   \item
-    \textabbrv{CSS} avancé ou \emph{Framework};
+    \textabbrv{CSS} avancé ou Framework;
   \item
-    Initiation au dynamisme côté client (JavaScript, jQuery, \ldots).
+    initiation au dynamisme côté client (JavaScript, bibliothèques comme
+    jQuery)
   \end{itemize}
 \item
   Scripts côté serveur.
 \item
-  Éléments d'interaction client-serveur (requête \textabbrv{HTTP}, \textabbrv{URL}, formulaire).
+  Eléments d'interaction client-serveur (requête \textabbrv{HTTP}, \textabbrv{URL}, formulaire).
 \item
   Interrogation d'un \textabbrv{SGBD} ou d'une \textabbrv{API}.
 \item
-  Sensibilisation à la sécurisation de sites : failles \textabbrv{XSS}/\textabbrv{XSS}
-  stockée/injections \textabbrv{SQL}.
+  Sensibilisation à la sécurisation de sites : failles \textabbrv{XSS}, \textabbrv{XSS} stockée,
+  injections \textabbrv{SQL}.
 \end{itemize}
 L'utilisation de l'anglais est préconisée dans la documentation du code.
 }
 
 % Mots-clés
-\ajoutRmotscles{Web, Développement, Algorithmes, \textabbrv{SGBD}, \textabbrv{API}, Sécurité, Environnement client-serveur.}
+\ajoutRmotscles{Web, Développement, Algorithmes, \textabbrv{SGBD}, \textabbrv{API}, Sécurité, Client-serveur.}
