--- a/latex/ressources/R213.tex
+++ b/latex/ressources/R213.tex
@@ -48,38 +48,38 @@ l'exploitation d'algorithmes mis en œuvre via un outil informatique.}
   Suites, récurrence, signal numérique
   \begin{itemize}
   \item
-    Raisonnement par récurrence
+    raisonnement par récurrence;
   \item
-    Suites récurrentes
+    suites récurrentes;
   \item
-    Signal discret (par ex : Kronecker, échelon échantillonné\ldots)
+    signal discret (exemples : Kronecker, échelon échantillonné\ldots);
   \item
-    Convergence d'une suite (opérations sur les limites)
+    convergence d'une suite (opérations sur les limites).
   \end{itemize}
 \item
   Vecteurs en \textabbrv{2D} et \textabbrv{3D}
   \begin{itemize}
   \item
-    Définitions
+    définitions;
   \item
-    Opérations (addition et multiplication externe)
+    opérations (addition et multiplication externe);
   \item
-    Produit scalaire (lien avec la trigonométrie)
+    produit scalaire (lien avec la trigonométrie);
   \item
-    Application au calcul d'une équation de droite
+    application au calcul d'une équation de droite.
   \end{itemize}
 \item
   Matrices et vecteurs
   \begin{itemize}
   \item
-    Définition
+    définitions;
   \item
-    Opérations
+    opérations;
   \item
-    Résolutions de systèmes linéaires (pivot de Gauss)
+    résolutions de systèmes linéaires (pivot de Gauss).
   \end{itemize}
 \end{itemize}
 }
 
 % Mots-clés
-\ajoutRmotscles{Suites, Ensembles, Vecteurs, Matrices.}
+\ajoutRmotscles{Mathématiques, Suites, Ensembles, Vecteurs, Matrices.}
