--- a/latex/ressources/R214.tex
+++ b/latex/ressources/R214.tex
@@ -38,55 +38,55 @@
 mathématiques de base, en particulier la dérivation, l'intégration
 (calcul de puissance, de valeur efficace, de valeur moyenne). Les
 systèmes sont souvent étudiés en régime linéaire, d'où l'intérêt de
-définir des équivalents. On veillera à montrer l'intérêt des concepts
-présentés pour modéliser les systèmes électroniques et on choisira de
-préférence des exercices en lien avec l'électronique et les
-télécommunications.}
+définir des équivalents.\\
+On veillera à montrer l'intérêt des concepts présentés pour modéliser
+les systèmes électroniques et on choisira de préférence des exercices en
+lien avec l'électronique et les télécommunications.}
 
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Dérivée :
+  Dérivée
   \begin{itemize}
   \item
-    Définition;
+    définition;
   \item
-    Notation \(s'(t)=\frac{\operatorname{d}s}{\operatorname{d}t}\);
+    notation \(s'(t)=\frac{\operatorname{d}s}{\operatorname{d}t}\);
   \item
-    Équation de la tangente;
+    équation de la tangente;
   \item
-    Dérivée des fonctions usuelles;
+    dérivée des fonctions usuelles;
   \item
-    Opérations sur les dérivées (somme, produit, quotient, composition);
+    opérations sur les dérivées (somme, produit, quotient, composition);
   \item
-    Sens de variation;
+    sens de variation;
   \item
-    Application à la recherche d'optimum local.
+    application à la recherche d'optimum local.
   \end{itemize}
 \item
-  Comportement local et asymptotique :
+  Comportement local et asymptotique
   \begin{itemize}
   \item
-    Limites (opérations, formes indéterminées);
+    limites (opérations, formes indéterminées);
   \item
-    Fonctions négligeables, équivalents.
+    fonctions négligeables, équivalents.
   \end{itemize}
 \item
-  Intégration :
+  Intégration
   \begin{itemize}
   \item
-    Définition d'une intégrale comme une surface;
+    définition d'une intégrale comme une surface;
   \item
-    Primitive;
+    primitive;
   \item
-    Calcul d'une intégrale à l'aide d'une primitive;
+    calcul d'une intégrale à l'aide d'une primitive;
   \item
-    Intégration par parties et changement de variable.
+    intégration par parties et changement de variable;
   \end{itemize}
 \end{itemize}
 }
 
 % Mots-clés
-\ajoutRmotscles{Dérivées, Intégrales, Limites.}
+\ajoutRmotscles{Mathématiques, Dérivées, Intégrales, Limites.}
