--- a/latex/ressources/R210.tex
+++ b/latex/ressources/R210.tex
@@ -36,13 +36,13 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances langagières pour les
-compétences de cœur de métier ``Administrer les réseaux et l'Internet''
-(RT1) et ``Connecter les entreprises et les usagers'' (RT2). Elle
-contribue aussi à la compétence ``Créer des outils et applications
-informatiques pour les R\&T'' (RT3) à travers des mises en situations,
-jeux de rôle, dialogues qui permettent la prise de parole en continu et
-en interaction, en développant les compétences de compréhension dans un
-contexte professionnel technique.}
+compétences de cœur de métier \og Administrer les réseaux et
+l'Internet\fg{} (RT1) et \og Connecter les entreprises et les
+usagers\fg{} (RT2). Elle contribue aussi à la compétence \og Créer des
+outils et applications informatiques pour les R\&T\fg{} (RT3) à travers
+des mises en situations, jeux de rôle, dialogues qui permettent la prise
+de parole en continu et en interaction, en développant les compétences
+de compréhension dans un contexte professionnel technique.}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -51,21 +51,21 @@ contexte professionnel technique.}
 \item
   Savoir structurer son discours oral et écrit (courriel, conversation
   téléphonique, visioconférence,
-  réunion, débat).
+  réunion, débat);
 \item
-  Présenter son parcours professionnel à l'oral et à l'écrit (\textabbrv{CV}, lettre
-  de motivation, entretien).
+  présenter son parcours professionnel à l'oral et à l'écrit (\textabbrv{CV}, lettre
+  de motivation, entretien);
 \item
-  Analyser des problèmes et proposer des solutions.
+  analyser des problèmes et proposer des solutions
 \item
-  Faire un exposé technique.
+  faire un exposé technique;
 \item
-  Développer le vocabulaire technique des domaines cibles.
+  développer le vocabulaire technique des domaines cibles;
 \item
-  Extensions possibles : télécollaboration, télétandem, parcours
+  extensions possibles : télécollaboration, télétandem, parcours
   international, dispositif \textabbrv{EMILE}.
 \end{itemize}
 }
 
 % Mots-clés
-\ajoutRmotscles{Anglais général et technique, Situations de communication professionnelle, Expression et compréhension.}
+\ajoutRmotscles{Anglais général, Anglais technique, Communication professionnelle, Expression, Compréhension.}
