--- a/latex/ressources/R211.tex
+++ b/latex/ressources/R211.tex
@@ -35,7 +35,7 @@
 
 % Le descriptif
 \ajoutRancrage{La mise en place des connaissances nécessaires à une communication
-claire et professionnelle se poursuit au semestre 2, en ajoutant de
+claire et professionnelle se poursuit au semestre deux, en ajoutant de
 nouvelles exigences. L'enseignement s'appuie de nouveau sur des exemples
 de situations professionnelles typiques du domaine réseaux et
 télécommunications.}
@@ -56,7 +56,7 @@ télécommunications.}
   destinataire et répondant aux normes de
   présentation professionnelle et académique (dossier, présentation
   longue, exploitation de la mise en
-  forme pour alléger les contenus et guider la lecture\ldots).
+  forme pour alléger les contenus et guider la lecture).
 \item
   Réécrire et corriger ses documents.
 \item
@@ -80,7 +80,7 @@ télécommunications.}
 \item
   Adopter des savoir-être professionnels essentiels dans le travail en
   équipe (coopération, prise en
-  compte de l'opinion d'autrui, adaptation, prise d'initiative\ldots).
+  compte de l'opinion d'autrui, adaptation, prise d'initiative\ldots)
 \item
   S'initier à la gestion de projet : argumenter, défendre son point de
   vue.
@@ -89,10 +89,9 @@ télécommunications.}
 \item
   Comprendre et s'approprier les enjeux du monde contemporain.
 \end{itemize}
-\emph{Création de supports vidéo (film, tutoriel, notice) - outils de
-veille documentaire - critique des médias sociaux - participation à des
-actions culturelles - résumé - synthèse d'un document - débat - revue de
-presse}
+Création de supports vidéo (film, tutoriel, notice) - outils de veille
+documentaire - critique des médias sociaux - participation à des actions
+culturelles - résumé - synthèse d'un document - débat - revue de presse
 }
 
 % Mots-clés
