Corrige erreur sur le découpage du champ descriptif/contenu dans les ressources

--- a/latex/ressources/R110.tex
+++ b/latex/ressources/R110.tex
@@ -35,11 +35,18 @@
 
 
 % Le descriptif
-\ajoutRancrage{}
+\ajoutRancrage{Cette ressource apporte le socle de connaissances langagières pour les
+compétences de cœur de métier \og Administrer les réseaux et
+l'Internet\fg{} (RT1) et \og Connecter les entreprises et les
+usagers\fg{} (RT2). Elle contribue aussi à la compétence \og Créer des
+outils et applications informatiques pour les R\&T\fg{} (RT3) à travers
+des mises en situations, jeux de rôle, dialogues qui permettent la prise
+de parole en continu et en interaction, en développant les compétences
+de compréhension dans un contexte professionnel technique.}
 
 % Contenus
 \ajoutRcontenudetaille{
-Objectifs visés
+\vspace{-5pt}
 \begin{itemize}
 \item
   Développer sa confiance en soi
