--- a/latex/ressources/R207.tex
+++ b/latex/ressources/R207.tex
@@ -38,22 +38,22 @@
 \ajoutRprerequis{R109}{Introduction aux technologies Web}
 
 % Le descriptif
-\ajoutRancrage{Le professionnel R\&T traite un grand nombre de données, comme
+\ajoutRancrage{Le professionnel R\&T traite un grand nombre de données (par ex:
 l'annuaire des utilisateurs du réseau ou l'état des équipements
-informatiques. Elles peuvent servir à configurer et à administrer les
-services réseau d'une entreprise (compétence RT1) ou à alimenter les
-pages d'un site Web (compétence RT3). Il est donc amené à stocker,
-organiser, gérer, protéger des données provenant de différentes sources
-(thématiques du référentiel PIX, \url{https://pix.fr/competences}), mais
-aussi à les traiter en développant différents outils informatiques pour
-ses besoins personnels ou pour son équipe (compétence RT3). Plus
-largement, il contribue activement à l'exploitation et à la maintenance
-du système d'information de l'entreprise.\\
-Cette ressource introduit les systèmes de gestion de base de données.
-Elle présente différentes alternatives technologiques pour le stockage
-et le codage de l'information en fonction des données et de leur usage.
-L'accès aux données utilise des langages et des outils spécifiques qui
-seront introduits.}
+informatiques). Elles peuvent servir à configurer ou à administrer les
+services réseau d'une entreprise (RT1) ou à alimenter les pages d'un
+site Web (RT3). Il est donc amené à stocker, organiser, gérer, protéger
+des données provenant de différentes sources (thématiques du
+\href{https://pix.fr/competences}{PIX}), mais aussi à les traiter en
+développant différents outils informatiques pour ses besoins personnels
+ou pour son équipe (RT3). Plus largement, il contribue activement à
+l'exploitation et à la maintenance du système d'information de
+l'entreprise.\\
+Cette ressource introduit les éléments fondamentaux des systèmes de
+gestion de base de données. Elle présente différentes alternatives
+technologiques pour le stockage et le codage de l'information, en
+fonction des données, de leur usage. L'accès aux données utilise des
+langages et des scripts spécifiques qui seront introduits.}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -63,23 +63,23 @@ seront introduits.}
   Stockage et accès aux données :
   \begin{itemize}
   \item
-    système de gestion de données (relationnel/non relationnel);
+    Système de gestion de données (relationnel/non relationnel);
   \item
-    structuration des données: fichiers (\textabbrv{CSV}, \textabbrv{JSON}), exemples de sources
-    ouvertes (open data), web scraping;
+    Structuration des données: fichiers (\textabbrv{CSV}, \textabbrv{JSON}), exemples de sources
+    ouvertes (\emph{open data}), \emph{web scraping};
   \item
-    sensibilisation à la réglementation française et internationale
+    Sensibilisation à la réglementation française et internationale
     (\textabbrv{CNIL}, \textabbrv{RGPD}).
   \end{itemize}
 \item
   Base de données relationnelles :
   \begin{itemize}
   \item
-    schéma relationnel d'une base de données;
+    Schéma relationnel d'une base de données;
   \item
-    sensibilisation aux contraintes d'intégrité;
+    Sensibilisation aux contraintes d'intégrité;
   \item
-    création de tables simples;
+    Création de tables simples;
   \item
     Interrogation de données, ajout et modification de données.
   \end{itemize}
