--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -153,6 +153,8 @@ Document de travail formulant les propositions de l'ACD R\&T pour l'ensemble de 
 \end{center}
 
 \clearpage
+\RprerequislyceeAJ
+
 % ------ TABLE DES MATIERES (en version draft seulement)
 %\ifdef{\draft}{
 	%\section*{Table des matières}
