--- a/latex/ressources/R112.tex
+++ b/latex/ressources/R112.tex
@@ -31,11 +31,8 @@
 
 
 % Le descriptif
-\ajoutRancrage{}
-
-% Contenus
-\ajoutRcontenudetaille{
-\vspace{-5pt}
+\ajoutRancrage{Le Projet Personnel et Professionnel des semestres 1 et 2 de la première
+année de B.U.T. permet à l'étudiant :
 \begin{itemize}
 \item
   s'approprier son champ d'activité ;
@@ -59,10 +56,12 @@
   d'avoir une compréhension exhaustive du référentiel de compétences de
   la formation et des éléments
   le structurant (composantes essentielles, niveaux, apprentissages
-  critiques, famille de situations)
-  ;
-\end{itemize}
-Activités notamment proposées dans cette ressource :
+  critiques, famille de situations).
+\end{itemize}}
+
+% Contenus
+\ajoutRcontenudetaille{
+Les activités pouvant être proposées dans cette ressource sont :
 \begin{itemize}
 \item
   rencontres d'entrepreneurs, de chefs de service, de techniciens et
