--- a/latex/ressources/R208.tex
+++ b/latex/ressources/R208.tex
@@ -37,15 +37,14 @@
 
 % Le descriptif
 \ajoutRancrage{Le professionnel R\&T est amené à développer différents outils
-informatiques à usage personnel ou interne à l'équipe (compétence
-RT3-Programmer). Ces outils peuvent traiter des données complexes, viser
-des fonctionnalités multiples et être développé en équipe : il est alors
-nécessaire - pour le professionnel R\&T - de structurer son travail,
-tant sur les variables manipulant les données, les fichiers qui les
-sauvegardent ou les restaurent, que sur l'organisation (arborescence) de
-son projet. La ressource introduit ses éléments structurels en
-contribuant à l'acquisition des apprentissages critiques mentionnés
-précédemment.}
+informatiques à usage personnel ou interne à l'équipe (RT3). Ces outils
+peuvent traiter des données complexes, viser des fonctionnalités
+multiples et être développé en équipe : il est alors nécessaire - pour
+le professionnel R\&T - de structurer son travail, tant sur les
+variables manipulant les données, les fichiers qui les sauvegardent ou
+les restaurent, que sur l'organisation (arborescence) de son projet. La
+ressource introduit ses éléments structurels en contribuant à
+l'acquisition des apprentissages critiques mentionnés précédemment.}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -53,35 +52,35 @@ précédemment.}
 \begin{itemize}
 \item
   Structure d'un programme : arborescence de fichiers, modules et
-  packages
+  packages.
 \item
-  Contexte d'exécution : programme principal vs script
+  Contexte d'exécution : programme principal \emph{vs} script.
 \item
   Structure complexe de données :
   \begin{itemize}
   \item
-    listes \textabbrv{2D}, tableaux associatifs/dictionnaires
+    Listes \textabbrv{2D}, tableaux associatifs/dictionnaires;
   \item
-    notion de classes (instance, attributs, méthodes)
+    Notion de classes (instance, attributs, méthodes).
   \end{itemize}
 \item
   Manipulation de fichiers avancée :
   \begin{itemize}
   \item
-    fichiers structurés (\textabbrv{XML}, \textabbrv{CSV}, \textabbrv{JSON}, YAML)
+    Fichiers structurés (\textabbrv{XML}, \textabbrv{CSV}, \textabbrv{JSON}, YAML);
   \item
-    gestion de l'arborescence par le code
+    Gestion de l'arborescence par le code;
   \item
-    lecture/écriture de fichiers structurés
+    Lecture/écriture de fichiers structurés;
   \item
-    notion de sérialisation
+    Notion de sérialisation;
   \item
-    notion de persistance des données
+    Notion de persistance des données.
   \end{itemize}
 \item
-  Initiation aux expressions régulières
+  Initiation aux expressions régulières.
 \item
-  Introduction au traitement des erreurs
+  Introduction au traitement des erreurs.
 \end{itemize}
 L'utilisation de l'anglais est préconisée dans la documentation du code.
 }
